--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "argparse": "^1.0.10",
     "node-fetch": "^2.1.2",
-    "onvif": "https://github.com/nickw444/onvif.git"
+    "onvif": "^0.6.4"
   },
   "bin": {
     "motion-onvif-events": "./motion-onvif-events.js"
